# FFmpeg-video-compression

./: Makefile  README.md  compare_images_msssim.py  compare_with_msssim.py  ffmpeg_general_compression.py  framerate.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini  videosplit.py
.github/workflows/: main.yaml
requirements/: dev.txt
src/: compare_images_msssim.py  compare_with_msssim.py  ffmpeg_general_compression.py  framerate.py  split_video.py  videosplit.py
src/bulbitech_video_compression/: api.py  example.py  framerate.py  mvp_ffmpeg.py  split_video.py
